--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = PROJECTNAME
+name = gdocsync
 version = 0.0.1
 author = Peter Demin
 author_email = peterdemin@gmail.com
 description = 
 long_description = file:README.rst
-url = https://github.com/peterdemin/PROJECTNAME
+url = https://github.com/peterdemin/gdocsync
 classifiers =
     Development Status :: 4 - Beta
 	Intended Audience :: Developers
@@ -24,7 +24,7 @@ where=src
 
 [options.entry_points]
 console_scripts =
-    PROJECTNAME = PROJECTNAME.cli:cli
+    gdocsync = gdocsync.cli:cli
 
 [bdist_wheel]
 universal = 1
