Fix install requires

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gdocsync
-version = 0.0.1
+version = 0.0.2
 author = Peter Demin
 author_email = peterdemin@gmail.com
 description = 
@@ -17,7 +17,11 @@ classifiers =
 packages = find:
 include_package_data = true
 python_requires = >=3.8
-# install_requires =
+install_requires =
+    click
+    google-api-python-client
+    google-auth-httplib2
+    google-auth-oauthlib
 
 [options.packages.find]
 where=src
