--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gdocsync
-version = 0.0.3
+version = 0.0.4
 author = Peter Demin
 author_email = peterdemin@gmail.com
 description = 
@@ -22,6 +22,7 @@ install_requires =
     google-api-python-client
     google-auth-httplib2
     google-auth-oauthlib
+    lxml
 
 [options.packages.find]
 where=src
