--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
-norecursedirs=dist build .tox .eggs
-addopts=--doctest-modules
+norecursedirs=dist build .tox .eggs docs requirements
+# addopts=--doctest-modules
 doctest_optionflags=ALLOW_UNICODE ELLIPSIS
 filterwarnings=
 	# Suppress deprecation warning in flake8
