--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,11 +63,11 @@ jobs:
         with:
           python-version: ${{ matrix.python }}${{ matrix.dev }}
       - name: Install dependencies
-        run: |
-          make install
+        run: make install
       - name: Run tests
-        run:
-          make test
+        run: make test
+      - name: Run lint
+        run: make lint
 
   check:  # This job does nothing and is only used for the branch protection
     if: always()
