--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}${{ matrix.dev }}
+      - name: Install Ubuntu packages
+        run: apt install pandoc
       - name: Install dependencies
         run: make install
       - name: Run tests
