--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,8 +44,8 @@ jobs:
         - -dev
         platform:
         - ubuntu-latest
-        - macos-latest
-        - windows-latest
+        # - macos-latest
+        # - windows-latest
         include:
         - python: "3.8"
           platform: ubuntu-latest
