--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = gdocsync
-version = 0.1.3
+version = 0.1.4
 author = Peter Demin
 author_email = peterdemin@gmail.com
 description = 
 long_description = file:README.rst
 url = https://github.com/peterdemin/gdocsync
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
 	Programming Language :: Python :: 3
