--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description =
 long_description = file:README.rst
 url = https://github.com/peterdemin/gdocsync
 classifiers =
-    Development Status :: Development Status :: 5 - Production/Stable
+    Development Status :: 5 - Production/Stable
 	Intended Audience :: Developers
 	License :: OSI Approved :: MIT License
 	Programming Language :: Python :: 3
